crates/apollo-compiler/test_data/diagnostics/0076_merge_differing_responses.txt
Error: operation must not select different types using the same field name `someValue`
    ╭─[0076_merge_differing_responses.graphql:42:5]
    │
 39 │     someValue: nickname
    │     ─────────┬─────────  
    │              ╰─────────── `someValue` has type `String!` here
    │ 
 42 │     someValue: meowVolume
    │     ──────────┬──────────  
    │               ╰──────────── but the same field name has type `Int!` here
────╯
Error: operation must not select different types using the same field name `someValue`
    ╭─[0076_merge_differing_responses.graphql:42:5]
    │
 39 │     someValue: nickname
    │     ─────────┬─────────  
    │              ╰─────────── `someValue` has type `String!` here
    │ 
 42 │     someValue: meowVolume
    │     ──────────┬──────────  
    │               ╰──────────── but the same field name has type `Int!` here
────╯

